Add ability to sort transactions
